--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-  "name": "wherearewe-ionic2",
-  "author": "Dani Morte <socendani@gmail.com>",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "build": "ionic-app-scripts build",
-    "watch": "ionic-app-scripts watch",
-    "serve:before": "watch",
-    "emulate:before": "build",
-    "deploy:before": "build",
-    "build:before": "build",
-    "run:before": "build"
-  },
-  "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/compiler-cli": "0.6.2",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/platform-server": "2.0.0",
-    "@ionic/storage": "1.1.6",
-    "angular2-color-picker": "^1.3.0",
-    "firebase": "^3.5.3",
-    "ionic-angular": "2.0.0-rc.1",
-    "ionic-native": "2.2.3",
-    "ionicons": "3.0.0",
-    "moment": "2.13.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.21"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "0.0.38",
-    "typescript": "2.0.6"
-  },
-  "description": "wherearewe-ionic2: An Ionic project",
-  "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": []
+    "name": "wherearewe-ionic2",
+    "author": "Dani Morte <socendani@gmail.com>",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "build": "ionic-app-scripts build",
+        "watch": "ionic-app-scripts watch",
+        "serve:before": "watch",
+        "emulate:before": "build",
+        "deploy:before": "build",
+        "build:before": "build",
+        "run:before": "build"
+    },
+    "dependencies": {
+        "@angular/common": "2.1.1",
+        "@angular/compiler": "2.1.1",
+        "@angular/compiler-cli": "2.1.1",
+        "@angular/core": "2.1.1",
+        "@angular/forms": "2.1.1",
+        "@angular/http": "2.1.1",
+        "@angular/platform-browser": "2.1.1",
+        "@angular/platform-browser-dynamic": "2.1.1",
+        "@angular/platform-server": "2.1.1",
+        "@ionic/storage": "1.1.6",
+        "ionic-angular": "2.0.0-rc.2",
+
+        "angular2-color-picker": "^1.3.0",
+        "angular2-uuid": "^1.1.0",
+        "firebase": "^3.5.3",
+        "ionic-native": "2.2.3",
+        "ionicons": "3.0.0",
+        "moment": "2.13.0",
+        "rxjs": "5.0.0-beta.12",
+        "zone.js": "0.6.21"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "0.0.39",
+        "typescript": "2.0.6"
+    },
+    "description": "wherearewe-ionic2: An Ionic project",
+    "cordovaPlugins": [
+        "cordova-plugin-device",
+        "cordova-plugin-console",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-splashscreen",
+        "cordova-plugin-statusbar",
+        "ionic-plugin-keyboard"
+    ],
+    "cordovaPlatforms": []
 }
